<resources>
    <string name="app_name" translatable="false">AL Lines</string>
    <string name="game_logo" translatable="false">Game Logo</string>
    <string name="button_play">Play!</string>
    <string name="hiscore_label">HiScore:</string>
    <string name="hiscore" translatable="false">0</string>
    <string name="button_resume">Resume</string>
    <string name="button_new_game">New Game</string>
    <string name="button_settings">Settings</string>
    <string name="label_show_next_balls">Show next balls on:</string>
    <string name="cb_panel">Panel</string>
    <string name="cb_grid">Grid</string>
    <string name="button_apply">Apply</string>
    <string name="ingame_score">Score</string>
</resources>
