<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ancientlore.lines.ActivityMenu">

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/button_resume"
        android:id="@+id/buttonResume"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/button_new_game"
        android:id="@+id/buttonNewGame"
        android:layout_below="@+id/buttonResume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:id="@+id/buttonSettings"
        android:layout_below="@+id/buttonNewGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
